kubernetes/cluster/smart-home/zigbee2mqtt/zigbee2mqtt.yaml
# Service: Zigbee2MQTT
# Ingress: zmqtt.brhd.io
# Label: app.kubernetes.io/name: zigbee2mqtt
---
kind: Service
apiVersion: v1
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
  namespace: smart-home
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: zigbee2mqtt
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
  namespace: smart-home
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
    spec:
      restartPolicy: Always
      containers:
        - image: koenkk/zigbee2mqtt:2.14.2
          name: zigbee2mqtt
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 150Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /app/data
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
